--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     def espresso_core_version = "3.5.0"
     def activity_version = "1.6.1"
     def lifecycle_version = "2.5.1"
+    def fragment_version = "1.3.1"
 
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
