--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
 
         <activity
-            android:name=".activity.IntentHandlerActivity"
+            android:name=".activity.SendPostActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
