--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     def espresso_core_version = "3.5.0"
     def activity_version = "1.6.1"
     def lifecycle_version = "2.5.1"
+    def gson_version = "2.10.1"
     def fragment_version = "1.3.1"
 
     implementation "androidx.core:core-ktx:$core_version"
@@ -55,6 +56,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    implementation "com.google.code.gson:gson:$gson_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
