--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
     def core_version = "1.9.0"
     def appcompat_version = "1.5.1"
     def mdc_version = "1.7.0"
@@ -46,7 +47,7 @@ dependencies {
     def activity_version = "1.6.1"
     def lifecycle_version = "2.5.1"
     def gson_version = "2.10.1"
-    def fragment_version = "1.3.1"
+    def nav_version = "2.5.3"
 
     implementation "androidx.core:core-ktx:$core_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
@@ -57,6 +58,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "com.google.code.gson:gson:$gson_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
